<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registration_bg2"
    tools:context=".RegistrationForm">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/idRegFormInner"
        android:layout_width="@dimen/stdRegFormInnerWidth"
        android:layout_height="@dimen/stdRegFormInnerHeight"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:layout_marginBottom="120dp"
        android:background="@android:color/holo_blue_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/idRegFormFN"
            android:layout_width="@dimen/stdRegFormInpWidth"
            android:layout_height="@dimen/stdRegFormInpHeight"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="@dimen/stdRegFormLayoutMarginLeftnRight"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="@dimen/stdRegFormLayoutMarginLeftnRight"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/regFormFNHint"
            android:inputType="textPersonName"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textColorHint="#2C2A2A"
            android:textSize="@dimen/stdHintLoginInputSize"
            app:layout_constraintBottom_toTopOf="@+id/idRegFormLN"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idRegistrationForm"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/idRegFormLN"
            android:layout_width="@dimen/stdRegFormInpWidth"
            android:layout_height="@dimen/stdRegFormInpHeight"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="@dimen/stdRegFormLayoutMarginLeftnRight"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="@dimen/stdRegFormLayoutMarginLeftnRight"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/regFormLNHint"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textColorHint="#2C2A2A"
            android:textSize="@dimen/stdHintLoginInputSize"
            app:layout_constraintBottom_toTopOf="@+id/idRegFormUN"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idRegFormFN" />

        <Button
            android:id="@+id/idRegFormBtn"
            android:layout_width="@dimen/stdRegFormBtnWidth"
            android:layout_height="@dimen/stdLoginBtnHeight"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="@dimen/stdInpPad"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="@dimen/stdInpPad"
            android:layout_marginBottom="16dp"
            android:background="@drawable/gradient1"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/stdRegBtnSize"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idResultTV" />

        <TextView
            android:id="@+id/idRegistrationForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="62dp"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="62dp"
            android:layout_marginRight="62dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/alfa_slab_one"
            android:padding="@dimen/stdInpPad"
            android:text="@string/RegistrationForm"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="@dimen/FormTitle"
            app:layout_constraintBottom_toTopOf="@+id/idRegFormFN"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/idRegFormUN"
            android:layout_width="@dimen/stdRegFormInpWidth"
            android:layout_height="@dimen/stdRegFormInpHeight"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="@dimen/stdRegFormLayoutMarginLeftnRight"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="@dimen/stdRegFormLayoutMarginLeftnRight"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/regFormUNHint"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textColorHint="#2C2A2A"
            android:textSize="@dimen/stdHintLoginInputSize"
            app:layout_constraintBottom_toTopOf="@+id/idRegFormEMail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idRegFormLN" />

        <EditText
            android:id="@+id/idRegFormEMail"
            android:layout_width="@dimen/stdRegFormInpWidth"
            android:layout_height="@dimen/stdRegFormInpHeight"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="@dimen/stdRegFormLayoutMarginLeftnRight"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="@dimen/stdRegFormLayoutMarginLeftnRight"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/regFormEmailHint"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textColorHint="#2C2A2A"
            android:textSize="@dimen/stdHintLoginInputSize"
            app:layout_constraintBottom_toTopOf="@+id/idRegFormPW"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idRegFormUN" />

        <EditText
            android:id="@+id/idRegFormPW"
            android:layout_width="@dimen/stdRegFormInpWidth"
            android:layout_height="@dimen/stdRegFormInpHeight"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="@dimen/stdRegFormLayoutMarginLeftnRight"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="@dimen/stdRegFormLayoutMarginLeftnRight"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/regFormPWHint"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textColorHint="#2C2A2A"
            android:textSize="@dimen/stdHintLoginInputSize"
            app:layout_constraintBottom_toTopOf="@+id/idRegFormRePW"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idRegFormEMail" />

        <EditText
            android:id="@+id/idRegFormRePW"
            android:layout_width="@dimen/stdRegFormInpWidth"
            android:layout_height="@dimen/stdRegFormInpHeight"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="@dimen/stdRegFormLayoutMarginLeftnRight"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="@dimen/stdRegFormLayoutMarginLeftnRight"
            android:layout_marginBottom="6dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/regFormRePWHint"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textColorHint="#2C2A2A"
            android:textSize="@dimen/stdHintLoginInputSize"
            app:layout_constraintBottom_toTopOf="@+id/idResultTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idRegFormPW" />

        <TextView
            android:id="@+id/idResultTV"
            android:layout_width="@dimen/stdErrorTVWidth"
            android:layout_height="@dimen/stdErrorTVHeight"
            android:layout_marginStart="29dp"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="27dp"
            android:layout_marginRight="27dp"
            android:layout_marginBottom="5dp"
            android:textColor="#C90000"
            android:textSize="@dimen/stdErrorTxtSize"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/idRegFormBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idRegFormRePW" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>