<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    tools:context=".Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/stdInnerLoginLayoutWidth"
        android:layout_height="@dimen/stdInnerLoginLayoutHeight"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="130dp"
        android:background="@drawable/gradient2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/idTxtLogin"
            android:layout_width="@dimen/stdInpLoginPageWidth"
            android:layout_height="@dimen/stdInpLoginPageHeight"
            android:layout_marginStart="131dp"
            android:layout_marginLeft="131dp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="131dp"
            android:layout_marginRight="131dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_action_user"
            android:drawableLeft="@drawable/ic_action_user"
            android:hint="@string/hintUserName"
            android:inputType="textPersonName"
            android:padding="@dimen/stdInpPad"
            android:textColor="#000000"
            android:textColorHint="@android:color/background_light"
            android:textSize="@dimen/stdHintLoginInputSize"
            app:layout_constraintBottom_toTopOf="@+id/idTxtPswd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/idTxtPswd"
            android:layout_width="@dimen/stdInpLoginPageWidth"
            android:layout_height="@dimen/stdInpLoginPageHeight"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="100dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_action_password"
            android:drawableLeft="@drawable/ic_action_password"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:padding="@dimen/stdInpPad"
            android:textColor="#010101"
            android:textColorHint="@android:color/background_light"
            android:textSize="@dimen/stdHintLoginInputSize"
            app:layout_constraintBottom_toTopOf="@+id/idBtnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idTxtLogin"
            tools:ignore="TextViewEdits" />

        <Button
            android:id="@+id/idBtnLogin"
            android:layout_width="@dimen/stdLoginBtnWidth"
            android:layout_height="@dimen/stdLoginBtnHeight"
            android:layout_marginStart="124dp"
            android:layout_marginLeft="124dp"
            android:layout_marginEnd="124dp"
            android:layout_marginRight="124dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/loginbtngradient"
            android:padding="@dimen/stdInpPad"
            android:text="@string/loginTxt"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/stdHintLoginInputSize"
            app:layout_constraintBottom_toTopOf="@+id/idLoginFormRegisterTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idLoginErrorTV" />

        <TextView
            android:id="@+id/idLoginFormRegisterTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="124dp"
            android:layout_marginLeft="124dp"
            android:layout_marginEnd="119dp"
            android:layout_marginRight="119dp"
            android:layout_marginBottom="134dp"
            android:text="@string/registerTxt"
            android:textColor="#2730B0"
            android:textSize="@dimen/stdRegisterHereSize"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idBtnLogin" />

        <ImageView
            android:id="@+id/idLoginPageImg"
            android:layout_width="@dimen/stdLoginImgWidth"
            android:layout_height="@dimen/stdLoginImgHeight"
            android:layout_marginStart="96dp"
            android:layout_marginLeft="96dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="96dp"
            android:layout_marginRight="96dp"
            android:layout_marginBottom="44dp"
            android:contentDescription="@string/LoginImgDesc"
            app:layout_constraintBottom_toTopOf="@+id/idTxtLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo1" />

        <CheckBox
            android:id="@+id/idRememberMe"
            android:layout_width="@dimen/stdRememberMeWidth"
            android:layout_height="@dimen/stdRememberMeHeight"
            android:layout_marginStart="89dp"
            android:layout_marginLeft="89dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="88dp"
            android:layout_marginRight="88dp"
            android:layout_marginBottom="2dp"
            android:text="@string/txt_remember_me"
            android:textColor="#000000"
            android:textColorHighlight="#FF5722"
            android:textColorLink="#FF5722"
            android:textCursorDrawable="@android:color/holo_orange_dark"
            android:textSize="@dimen/stdRememberMeSize"
            app:layout_constraintBottom_toTopOf="@+id/idLoginErrorTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idTxtPswd" />

        <TextView
            android:id="@+id/idLoginErrorTV"
            android:layout_width="@dimen/stdErrorTVWidth"
            android:layout_height="@dimen/stdLoginErrorTVHeight"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="18dp"
            android:textColor="#F20606"
            android:textSize="@dimen/stdErrorTxtSize"
            app:layout_constraintBottom_toTopOf="@+id/idBtnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idRememberMe" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>