<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idDrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/idToolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#673AB7"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/idMenu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/menuDesc"
                android:src="@drawable/ic_action_menu"
                android:tint="#000000" />

            <TextView
                android:id="@+id/idTitleTxtToolBar"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:paddingTop="6dp"
                android:text="@string/app_name"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/idLogoutIV"
                android:layout_width="0dp"
                android:layout_height="@dimen/stdLogoutHeight"
                android:layout_marginStart="@dimen/stdLogoutBtn"
                android:layout_marginLeft="@dimen/stdLogoutBtn"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/LO"
                android:src="@drawable/logout" />
        </LinearLayout>

        <fragment
            android:id="@+id/idNavHostFrag"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="413dp"
            android:layout_height="676dp"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idToolBar"
            app:layout_constraintVertical_bias="1.0"
            app:navGraph="@navigation/homenav"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/idNavView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
